--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,1 +1,22 @@
-<p>orders works!</p>
+<div class="container">
+  <table class="table table-striped table-bordered table-hover mt-3" *ngIf="bills">
+    <thead>
+    <tr>
+      <th>ID</th>
+      <th>Date</th>
+      <th>CustomerId</th>
+      <th>Details</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let b of bills._embedded.bills">
+      <td>{{ b.id }}</td>
+      <td>{{ b.billingDate | date :'dd/MM/yyyy'}}</td>
+      <td>{{ b.customerID}}</td>
+      <td>
+        <button class="btn btn-success" (click)="getOrderDetails(b)">Orders Details</button>
+      </td>
+    </tr>
+    </tbody>
+  </table>
+</div>
